<?xml version="1.0" encoding="utf-8"?>
<!-- Ported from material-components-android catalog cat_search_appbar_icons_fragment.xml -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.Material3Expressive.AppBarWithSearch"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leading_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:scaleType="center"
                android:contentDescription="@string/app_top_bar_leading_icon_description"
                style="?attr/materialIconButtonStyle"
                app:icon="@drawable/ic_app_top_bar_home_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.search.SearchBar
                android:id="@+id/app_search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/app_top_bar_search_hint"
                app:defaultMarginsEnabled="false"
                app:hideNavigationIcon="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/leading_button"
                app:layout_constraintRight_toLeftOf="@id/settings_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="312dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="4dp"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_top_bar_settings_icon_description"
                style="?attr/materialIconButtonStyle"
                app:icon="@drawable/ic_app_top_bar_settings_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
