<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?android:colorBackground"
  tools:ignore="Overdraw">

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/song_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:orientation="vertical"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:collapsedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
      app:expandedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline4"
      app:scrimVisibleHeightTrigger="0dp"
      app:titleEnabled="true"
      app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="parallax">

        <ImageView
          android:id="@+id/album_image"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:contentDescription="@string/cat_music_player_album_cover_content_description"
          android:scaleType="centerCrop"
          app:layout_constraintDimensionRatio="H,1:1"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <!-- Album Info Container. Use a ViewGroup with background color -->
        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/album_info_container"
          android:layout_width="match_parent"
          android:layout_height="196dp"
          android:background="?attr/colorPrimarySurface"
          app:layout_collapseMode="parallax"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/album_image">

          <LinearLayout
            android:id="@+id/album_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="56dp"
            android:paddingEnd="16dp"
            android:paddingLeft="56dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
              android:id="@+id/album_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:ellipsize="end"
              android:maxLines="1"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorOnSurface"
              tools:text="Metamorphosis" />
            <TextView
              android:id="@+id/album_artist"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:ellipsize="end"
              android:maxLines="1"
              android:textAppearance="?attr/textAppearanceSubtitle1"
              android:textColor="?attr/colorOnSurface"
              tools:text="Sandra Adams" />

          </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- Music Player -->
        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/music_player_container"
          android:layout_width="match_parent"
          android:layout_height="196dp"
          android:background="@android:color/black"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/album_image"
          tools:visibility="visible">

          <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/music_progress_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cat_music_player_progress_indicator_content_description"
            android:indeterminate="false"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="8dp"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackHeight="3dp"
            app:trackCornerRadius="8dp"
            app:trackThickness="8dp" />

          <com.google.android.material.button.MaterialButton
            android:id="@+id/rewind_button"
            android:layout_width="@dimen/cat_music_player_button_size"
            android:layout_height="@dimen/cat_music_player_button_size"
            android:layout_marginStart="@dimen/cat_music_player_control_button_margin"
            android:layout_marginLeft="@dimen/cat_music_player_control_button_margin"
            android:contentDescription="@string/cat_music_player_rewind_button_content_description"
            app:icon="@drawable/ic_fast_rewind_24dp"
            app:layout_constraintBottom_toTopOf="@id/volume_slider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/music_progress_indicator" />

          <com.google.android.material.button.MaterialButton
            android:id="@+id/music_play_button"
            android:layout_width="@dimen/cat_music_player_button_size"
            android:layout_height="@dimen/cat_music_player_button_size"
            android:contentDescription="@string/cat_music_player_pause_button_content_description"
            app:icon="@drawable/ic_play_arrow_white_24dp"
            app:layout_constraintBottom_toTopOf="@id/volume_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/music_progress_indicator" />

          <com.google.android.material.button.MaterialButton
            android:id="@+id/fast_forward_button"
            android:layout_width="@dimen/cat_music_player_button_size"
            android:layout_height="@dimen/cat_music_player_button_size"
            android:layout_marginEnd="@dimen/cat_music_player_control_button_margin"
            android:layout_marginRight="@dimen/cat_music_player_control_button_margin"
            android:contentDescription="@string/cat_music_player_fast_forward_button_content_description"
            app:icon="@drawable/ic_fast_forward_white_24dp"
            app:layout_constraintBottom_toTopOf="@id/volume_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/music_progress_indicator" />

          <com.google.android.material.button.MaterialButton
            android:id="@+id/volume_down_button"
            android:layout_width="@dimen/cat_music_player_button_size"
            android:layout_height="@dimen/cat_music_player_button_size"
            android:layout_marginStart="@dimen/cat_music_player_volume_button_margin"
            android:layout_marginLeft="@dimen/cat_music_player_volume_button_margin"
            android:contentDescription="@string/cat_music_player_volume_down_button_content_description"
            app:icon="@drawable/ic_volume_down_white_24dp"
            app:layout_constraintBottom_toBottomOf="@id/volume_slider"
            app:layout_constraintEnd_toStartOf="@id/volume_slider"
            app:layout_constraintTop_toTopOf="@id/volume_slider" />

          <com.google.android.material.slider.Slider
            android:id="@+id/volume_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/cat_music_player_volume_slider_content_description"
            android:value="3.5"
            android:valueFrom="0"
            android:valueTo="10"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_min="200dp"
            app:layout_constraintWidth_percent="0.55"
            app:thumbRadius="8dp"
            app:trackHeight="3dp" />

          <com.google.android.material.button.MaterialButton
            android:id="@+id/volume_up_button"
            android:layout_width="@dimen/cat_music_player_button_size"
            android:layout_height="@dimen/cat_music_player_button_size"
            android:layout_marginEnd="@dimen/cat_music_player_volume_button_margin"
            android:layout_marginRight="@dimen/cat_music_player_volume_button_margin"
            android:contentDescription="@string/cat_music_player_volume_up_button_content_description"
            app:icon="@drawable/ic_volume_up_white_24dp"
            app:layout_constraintBottom_toBottomOf="@id/volume_slider"
            app:layout_constraintStart_toEndOf="@id/volume_slider"
            app:layout_constraintTop_toTopOf="@id/volume_slider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/fab"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          app:layout_constraintBottom_toTopOf="@id/album_info_container"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/album_info_container"
          app:srcCompat="@drawable/ic_play_arrow_white_24dp" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <!-- Spacer view to push toolbar below status bar -->
      <View
        android:id="@+id/toolbar_spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="0dp"
        app:layout_collapseMode="parallax" />

      <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/cat_music_player_toolbar_height"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="false"
        android:clickable="true"
        android:focusable="true"
        app:layout_collapseMode="pin"
        app:menu="@menu/album_menu"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:titleTextColor="?attr/colorOnSurface" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>
  </com.google.android.material.appbar.AppBarLayout>

  <com.google.android.material.floatingtoolbar.FloatingToolbarLayout
    android:id="@+id/music_floating_toolbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    style="?attr/floatingToolbarStyle">

    <com.google.android.material.overflow.OverflowLinearLayout
      android:id="@+id/music_floating_toolbar_child"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:orientation="horizontal"
      style="?attr/overflowLinearLayoutStyle">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/floating_toolbar_previous"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cat_music_player_rewind_button_content_description"
        app:icon="@drawable/ic_fast_rewind_24dp"
        app:backgroundTint="?attr/colorSurfaceVariant"
        app:iconTint="?attr/colorOnSurface" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/floating_toolbar_play_pause"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cat_music_player_pause_button_content_description"
        app:icon="@drawable/ic_play_arrow_white_24dp"
        app:backgroundTint="?attr/colorPrimaryContainer"
        app:iconTint="?attr/colorOnPrimaryContainer" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/floating_toolbar_next"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cat_music_player_fast_forward_button_content_description"
        app:icon="@drawable/ic_fast_forward_white_24dp"
        app:backgroundTint="?attr/colorSurfaceVariant"
        app:iconTint="?attr/colorOnSurface" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/floating_toolbar_translation"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cat_music_player_album_menu_translation_title"
        app:icon="@drawable/ic_translate_white_24dp"
        app:backgroundTint="?attr/colorSurfaceVariant"
        app:iconTint="?attr/colorOnSurface"
        app:layout_overflowText="@string/cat_music_player_album_menu_translation_title" />

    </com.google.android.material.overflow.OverflowLinearLayout>
  </com.google.android.material.floatingtoolbar.FloatingToolbarLayout>

  <com.google.android.material.floatingtoolbar.FloatingToolbarLayout
    android:id="@+id/catalog_floating_toolbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:layout_margin="16dp"
    android:visibility="visible"
    style="?attr/floatingToolbarVibrantStyle"
    app:layout_behavior="com.google.android.material.behavior.HideViewOnScrollBehavior"
    app:materialThemeOverlay="@style/ThemeOverlay.CatalogFloatingToolbar">

    <com.google.android.material.overflow.OverflowLinearLayout
      android:id="@+id/catalog_floating_toolbar_child"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="horizontal">

      <include layout="@layout/cat_floating_toolbar_content" />
    </com.google.android.material.overflow.OverflowLinearLayout>
  </com.google.android.material.floatingtoolbar.FloatingToolbarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

